学习完第19章

--- a/LeanTest/Info.plist
+++ b/LeanTest/Info.plist
@@ -50,5 +50,7 @@
 	<array>
 		<string>Pacifico.ttf</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>此 App 需要您的同意才能读取媒体资料库</string>
 </dict>
 </plist>
